refactor: modernize
The unknown collect bones state is now a QuestSyncStep

No fancy "create once" functions in RagBoneState

A temporary test I intend to remove. This was used to ensure the item IDs matched the old item IDs that used `pos`